# smartfarm

./: CLAUDE.md  LICENSE  design.md  docker-jupyter.sh  smartfarm.code-workspace
ap-server/: .gitignore  README.md  platformio.ini
ap-server/include/: ap_config.h  dhcp_server.h  reservations.h
ap-server/src/: dhcp_server.cpp  main.cpp  reservations.cpp
esp32cam/: .gitignore  README.md  platformio.ini
esp32cam/include/: secrets.example.h
esp32cam/src/: app_httpd.cpp  camera_frame.cpp  camera_frame.h  camera_module.h  camera_pins.h  main.cpp
jetson/: README.md  docker-compose.yaml  test-gpu.py
jetson-ctrl/: .gitignore  CMakeLists.txt  DESIGN.md  README.md  config.example.json
jetson-ctrl/docs/: config-reference.md  host-setup.md
jetson-ctrl/python/: README.md  ds3231.py  ds3231_sync.py  ds3231_writeback.py  install.sh
jetson-ctrl/python/systemd/: ds3231-sync.service  ds3231-writeback.service  ds3231-writeback.timer
jetson-ctrl/src/: config.cpp  config.hpp  control.cpp  control.hpp  dht22.cpp  dht22.hpp  fan.cpp  fan.hpp  log.hpp  main.cpp  net.cpp  net.hpp  notify.hpp  thermal.cpp  thermal.hpp
jetson-ctrl/systemd/: jetson-ctrl.service
jetson-ctrl/tests/: test_control.cpp
nvdli-data/: verify-settings.ipynb
nvdli-data/.ipynb_checkpoints/: verify-settings-checkpoint.ipynb
pump-zone/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
pump-zone-esp01/: .gitignore  README.md  platformio.ini
pump-zone-esp01/include/: pump_config.h  secrets.example.h
pump-zone-esp01/src/: main.cpp  relay.cpp  relay.h  status_led.cpp  status_led.h  watchdog.cpp  watchdog.h  web_server.cpp  web_server.h  wifi.cpp  wifi.h
pump-zone/include/: pump_config.h  secrets.example.h
pump-zone/src/: CMakeLists.txt  main.c  main.h  task_settings.h
pump-zone/src/actuators/: relay.c  relay.h  rgb_led.c  rgb_led.h
pump-zone/src/http/: http_server.c  http_server.h  http_server_relay.c
pump-zone/src/network/: wifi_sta.c  wifi_sta.h
sensor-zone/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
sensor-zone/docs/: PARITY.md
sensor-zone/include/: secrets.example.h
sensor-zone/src/: CMakeLists.txt  main.c  main.h  task_settings.h
sensor-zone/src/actuators/: rgb_led.c  rgb_led.h
sensor-zone/src/http/: http_client.c  http_client.h
sensor-zone/src/network/: wifi_sta.h
sensor-zone/src/sensors/: dht22.c  dht22.h  sensor_task.c  sensor_task.h  soil_moisture_adc.c  soil_moisture_adc.h
sensor-zone/test/test_dht_checksum/: test_main.c
sensor-zone/test/test_json_body/: test_main.c
sensor-zone/test/test_soil_map/: test_main.c
sensor-zone/tools/: parity_diff.py
smartfarm-ai/: .gitignore  README.md  ai_service.py  canopy.py  convert_weights.py  disease.py  docker-compose.yaml  download_model.sh  frame_poller.py  smartfarm_inference.ipynb  water_stress.py
smartfarm-ai/models/: .gitignore  link.txt
web-server/: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEV.md  Dockerfile  README.md  docker-compose.ai.yaml  docker-compose.yaml  package-lock.json  package.json  server.js
web-server/ai-example/: README.md
web-server/client/: .env.development  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web-server/client/src/: App.jsx  index.css  main.jsx
web-server/client/src/app/: store.js
web-server/client/src/components/: AppShell.jsx  Led.jsx  StatusHeader.jsx
web-server/docs/: ai-features-roadmap.md  ai-frame-pull.md  camera-longevity-redesign.md  camera-protocol.md
web-server/scripts/: deploy.js  seed-demo.js
web-server/src/insights/: canopy.js  disease.js  waterStress.js
web-server/src/routes/: analytics.js  camera.js  canopy.js  control.js  devices.js  disease.js  health.js  irrigation.js  pump.js  settings.js  telemetry.js  waterStress.js
web-server/src/scheduler/: irrigationScheduler.js
web-server/src/store/: cameraConfig.js  cameraHealth.js  cameraLive.js  canopyStore.js  deviceStore.js  diseaseStore.js  frameStore.js  pumpControl.js  pumpLog.js  settingsStore.js  waterStressStore.js
web-server/wireframes/smart_farm_AI-Analytics/: code.html
web-server/wireframes/smart_farm_camera/: code.html
web-server/wireframes/smart_farm_dashboard/: DESIGN.md  code.html
web-server/wireframes/smart_farm_irrigation/: code.html
(+44 files in other folders)
