idf_component_register(
    SRCS
        "main.c"
        "actuators/rgb_led.c"
        "network/wifi_sta.c"
        "sensors/dht22.c"
        "sensors/soil_moisture_adc.c"
        "sensors/sensor_task.c"
        "http/http_client.c"
    INCLUDE_DIRS
        "."
        "actuators"
        "network"
        "sensors"
        "http"
        "../include"
)
